# blog-aiohttp

./: main.py  pyproject.toml
app/forum/: routes.py  views.py
app/store/database/: accessor.py
migrations/versions/: 15b4250eb151_create_table_message.py
templates/: index.html
