[tool.poetry]
name = "blogaiohttp"
version = "0.1.0"
description = ""
authors = ["annett21 <annettarasevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiohttp-jinja2 = "^1.5.1"
pyyaml = "^6.0"
gino = "^1.0.1"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
